--- a/kubernetes/overlays/dev/destination-rules.yaml
+++ b/kubernetes/overlays/dev/destination-rules.yaml
@@ -1,12 +1,12 @@
----
-apiVersion: networking.istio.io/v1alpha3
-kind: DestinationRule
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: DestinationRule
 
-metadata:
-    name: api
+# metadata:
+#     name: api
 
-spec:
-    host: api-v1.sweetrpg-library.svc.cluster.local
-    trafficPolicy:
-        loadBalancer:
-            simple: LEAST_CONN
+# spec:
+#     host: api-v1.sweetrpg-library.svc.cluster.local
+#     trafficPolicy:
+#         loadBalancer:
+#             simple: LEAST_CONN
