--- a/kubernetes/overlays/dev/virtual-service.yaml
+++ b/kubernetes/overlays/dev/virtual-service.yaml
@@ -1,57 +1,57 @@
----
-# See more at https://istio.io/docs/reference/config/networking/virtual-service/
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
+# ---
+# # See more at https://istio.io/docs/reference/config/networking/virtual-service/
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
 
-metadata:
-    name: api-0
+# metadata:
+#     name: api-0
 
-spec:
-    hosts:
-        - dev.sweetrpg.com
-    gateways:
-        - sweetrpg-main/gateway
-    http:
-        - match:
-              - uri:
-                    prefix: /api/0/library/
-          route:
-              - destination:
-                    host: api-v1.sweetrpg-library.svc.cluster.local
-                    port:
-                        number: 8281
-#   tls:
-#     - match:
-#         - uri:
-#             prefix: /api/0/library
-#         - port: 443
-#           sniHosts:
-#             - dev.sweetrpg.com
-#       route:
-#         - destination:
-#             host: api-v1.sweetrpg-library.svc.cluster.local
-#             port:
-#               number: 8281
+# spec:
+#     hosts:
+#         - dev.sweetrpg.com
+#     gateways:
+#         - sweetrpg-main/gateway
+#     http:
+#         - match:
+#               - uri:
+#                     prefix: /api/0/library/
+#           route:
+#               - destination:
+#                     host: api-v1.sweetrpg-library.svc.cluster.local
+#                     port:
+#                         number: 8281
+# #   tls:
+# #     - match:
+# #         - uri:
+# #             prefix: /api/0/library
+# #         - port: 443
+# #           sniHosts:
+# #             - dev.sweetrpg.com
+# #       route:
+# #         - destination:
+# #             host: api-v1.sweetrpg-library.svc.cluster.local
+# #             port:
+# #               number: 8281
 
----
-# See more at https://istio.io/docs/reference/config/networking/virtual-service/
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
+# ---
+# # See more at https://istio.io/docs/reference/config/networking/virtual-service/
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
 
-metadata:
-    name: api-1
+# metadata:
+#     name: api-1
 
-spec:
-    hosts:
-        - dev.sweetrpg.com
-    gateways:
-        - sweetrpg-main/gateway
-    http:
-        - match:
-              - uri:
-                    prefix: /api/1/library/
-          route:
-              - destination:
-                    host: api-v1.sweetrpg-library.svc.cluster.local
-                    port:
-                        number: 8281
+# spec:
+#     hosts:
+#         - dev.sweetrpg.com
+#     gateways:
+#         - sweetrpg-main/gateway
+#     http:
+#         - match:
+#               - uri:
+#                     prefix: /api/1/library/
+#           route:
+#               - destination:
+#                     host: api-v1.sweetrpg-library.svc.cluster.local
+#                     port:
+#                         number: 8281
